-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.9.0 RC
-
-
7a238e122 (dev), 04cb0a1b5 (6.9), c63c918f3 (6.9.0)
QLabel scaled pixmap doesn't work correctly: bad image quality and high memory usage.
Running LabelPixmapTest.zip
:
- labelpixmaptest_673.mp4
Qt 6.7.3 - after animation memory usage is around 15 MiB - labelpixmaptest_69rc.mp4
Qt 6.9 RC - after animation memory usage is around 720 MiB
Please watch attached videos to see the image quality.
- resulted from
-
QTBUG-122403 QLabel should take a QIcon (instead a QPixmap)
-
- Reported
-
| For Gerrit Dashboard: QTBUG-134930 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 633001,3 | QLabel: don't cache scaled pixmap in QIcon | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 633299,2 | QLabel: don't cache scaled pixmap in QIcon | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
| 633352,2 | QLabel: don't cache scaled pixmap in QIcon | 6.9.0 | qt/qtbase | Status: MERGED | +2 | 0 |