QLabel: don't cache scaled pixmap in QIcon

Caching the scaled QPixmap directly in QIcon is not a good idea
 - the cached pixmap might be used as starting point for a pixmap with
   another size so it gets blurry
 - QIcon has no caching mechanism to throw away unneeded QPixmaps after
   some time so the memory usage grows indefinitely

Pick-to: 6.9.0
Fixes: QTBUG-134930
Change-Id: Ic490ba15438a5cd07a555692e1d08cd1c211d005
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 7a238e1225f49b81772516ed5d0a5a4f4f2e9268)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>